@@ -11,3 +11,12 @@
 .point-in-use {
   margin-right: 1rem;
 }
+.favourite-div {
+  margin-top: 1rem;
+}
+.spells-select {
+  min-width: 15rem;
+}
+.module-select {
+  min-width: 15rem;
+}
