@@ -1,5 +1,6 @@
 2/1/2021
 -   Improved Auto Fleet updater
+-   New cards: "Favourite ship modules" and "Favourite spell"
 
 20/12/2020
 -   Auto Prestige update
